--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "use-async-effect",
   "version": "1.0.1",
-  "description": "This package allows you to use the useEffect hook from React with the async await syntax",
+  "description": "Asynchronous side effects, without the nonsense",
   "main": "index.js",
+  "typings": "index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rauldeheer/use-async-effect.git"
@@ -14,10 +15,8 @@
   "keywords": [
     "react",
     "hooks",
-    "useEffect",
     "async",
-    "await",
-    "use-async-effect"
+    "side-effects"
   ],
   "author": "Raul de Heer",
   "license": "MIT",
@@ -25,7 +24,7 @@
     "react": "^16.7.0"
   },
   "devDependencies": {
-    "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2"
+    "@types/react": "^16.7.7",
+    "react": "^16.7.0-alpha.2"
   }
 }
