--- a/package.json
+++ b/package.json
@@ -27,14 +27,13 @@
   "author": "Raul de Heer",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
-    "@types/react": "^16.9.2",
-    "dtslint": "^0.9.6",
-    "flow-bin": "^0.107.0",
-    "prettier": "^1.18.2",
-    "react": "^16.9.0",
-    "typescript": "^3.6.3"
+    "@types/react": "^18.0.12",
+    "dtslint": "^4.2.1",
+    "flow-bin": "^0.180.0",
+    "prettier": "^2.6.2",
+    "typescript": "^4.7.3"
   }
 }
